All: Remove closing slash on empty elements

--- a/demo/ajaxSubmit-integration-demo.html
+++ b/demo/ajaxSubmit-integration-demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Test for jQuery validate() plugin</title>
-	<link rel="stylesheet" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<style>
 	.warning {
 		color: red;
@@ -31,7 +31,7 @@
 		});
 
 		// show a simple loading indicator
-		var loader = jQuery('<div id="loader"><img src="images/loading.gif" alt="loading..." /></div>')
+		var loader = jQuery('<div id="loader"><img src="images/loading.gif" alt="loading..."></div>')
 			.css({
 				position: "relative",
 				top: "1em",
@@ -70,19 +70,19 @@
 			<legend>Login Form (Enter "foobar" as password)</legend>
 			<p>
 				<label for="user">Username</label>
-				<input id="user" name="user" title="Please enter your username (at least 3 characters)" class="required" minlength="3" />
+				<input id="user" name="user" title="Please enter your username (at least 3 characters)" class="required" minlength="3">
 			</p>
 			<p>
 				<label for="pass">Password</label>
-				<input type="password" name="password" id="password" class="required" minlength "5" />
+				<input type="password" name="password" id="password" class="required" minlength "5">
 			</p>
 			<p>
-				<input class="submit" type="submit" value="Login" />
+				<input class="submit" type="submit" value="Login">
 			</p>
 		</fieldset>
 	</form>
 	<div id="result" class="warning">Please login!</div>
-	<br/>
+	<br>
 	<button id="reset">Programmatically reset above form!</button>
 	<a href="index.html">Back to main page</a>
 </div>
