--- a/demo/custom-messages-data-demo.html
+++ b/demo/custom-messages-data-demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>jQuery validation plug-in - comment form example</title>
-	<link rel="stylesheet" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<script src="../lib/jquery.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
 	<script>
@@ -40,10 +40,10 @@
 			<legend>Please enter your email address</legend>
 			<p>
 				<label for="cemail">E-Mail *</label>
-				<input id="cemail" name="email" data-rule-required="true" data-rule-email="true" data-msg-required="Please enter your email address" data-msg-email="Please enter a valid email address" />
+				<input id="cemail" name="email" data-rule-required="true" data-rule-email="true" data-msg-required="Please enter your email address" data-msg-email="Please enter a valid email address">
 			</p>
 			<p>
-				<input class="submit" type="submit" value="Submit" />
+				<input class="submit" type="submit" value="Submit">
 			</p>
 		</fieldset>
 	</form>
@@ -53,10 +53,10 @@
 			<legend>Please enter your email address</legend>
 			<p>
 				<label for="cemail">E-Mail *</label>
-				<input id="cemail" name="email" data-rule-required="true" data-rule-email="true" data-msg-email="Please enter a valid email address" />
+				<input id="cemail" name="email" data-rule-required="true" data-rule-email="true" data-msg-email="Please enter a valid email address">
 			</p>
 			<p>
-				<input class="submit" type="submit" value="Submit" />
+				<input class="submit" type="submit" value="Submit">
 			</p>
 		</fieldset>
 	</form>
