--- a/demo/custom-methods-demo.html
+++ b/demo/custom-methods-demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Test for jQuery validate() plugin</title>
-	<link rel="stylesheet" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<script src="../lib/jquery.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
 	<script>
@@ -85,7 +85,7 @@
 						<label for="number">textarea</label>
 					</td>
 					<td>
-						<input id="number" name="number" title="Please enter a number with at least 3 and max 15 characters!" />
+						<input id="number" name="number" title="Please enter a number with at least 3 and max 15 characters!">
 					</td>
 					<td></td>
 				</tr>
@@ -94,7 +94,7 @@
 						<label for="secret">Secret</label>
 					</td>
 					<td>
-						<input name="secret" id="secret" />
+						<input name="secret" id="secret">
 					</td>
 					<td></td>
 				</tr>
@@ -103,12 +103,12 @@
 						<label for="math">7 + 4 =</label>
 					</td>
 					<td>
-						<input id="math" name="math" title="Please enter the correct result!" />
+						<input id="math" name="math" title="Please enter the correct result!">
 					</td>
 					<td></td>
 				</tr>
 			</table>
-			<input class="submit" type="submit" value="Submit" />
+			<input class="submit" type="submit" value="Submit">
 		</fieldset>
 	</form>
 	<h3 id="warning">Your form contains tons of errors! Please try again.</h3>
