--- a/demo/dynamic-totals.html
+++ b/demo/dynamic-totals.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>jQuery validation plug-in - dynamic forms demo</title>
-	<link rel="stylesheet" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<script src="../lib/jquery.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
 	<script>
@@ -101,7 +101,7 @@
 				</select>
 			</td>
 			<td class='quantity'>
-				<input size='4' class="quantity" min="1" id="item-quantity-{0}" name="item-quantity-{0}" />
+				<input size='4' class="quantity" min="1" id="item-quantity-{0}" name="item-quantity-{0}">
 			</td>
 			<td class='quantity-error'></td>
 		</tr>
@@ -119,14 +119,14 @@
 							<label>Totals (max 25)</label>
 						</td>
 						<td class="totals">
-							<input id="totals" name="totals" value="0" max="25" readonly="readonly" size='4' />
+							<input id="totals" name="totals" value="0" max="25" readonly="readonly" size='4'>
 						</td>
 						<td class="totals-error"></td>
 					</tr>
 					<tr>
 						<td colspan="2">&nbsp;</td>
 						<td>
-							<input class="submit" type="submit" value="Submit" />
+							<input class="submit" type="submit" value="Submit">
 						</td>
 					</tr>
 				</tfoot>
