--- a/demo/errorcontainer-demo.html
+++ b/demo/errorcontainer-demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Test for jQuery validate() plugin</title>
-	<link rel="stylesheet" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<script src="../lib/jquery.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
 	<style>
@@ -80,7 +80,7 @@
 				<div class="error">
 				</div>
 				<p>
-					<input class="submit" type="submit" value="Login" />
+					<input class="submit" type="submit" value="Login">
 				</p>
 			</fieldset>
 		</form>
@@ -138,8 +138,8 @@
 					<input type="checkbox" class="checkbox" id="agree" title="Please agree to our policy!" name="agree" required>
 				</p>
 				<p>
-					<input class="submit" type="submit" value="Submit" />
-					<input class="cancel" type="submit" value="Cancel" />
+					<input class="submit" type="submit" value="Submit">
+					<input class="cancel" type="submit" value="Cancel">
 				</p>
 			</fieldset>
 		</form>
