--- a/demo/errors-within-labels.html
+++ b/demo/errors-within-labels.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Test for jQuery validate() plugin</title>
 
-<link rel="stylesheet" media="screen" href="css/screen.css" />
+<link rel="stylesheet" media="screen" href="css/screen.css">
 
 <script src="../lib/jquery.js"></script>
 <script src="../dist/jquery.validate.js"></script>
@@ -70,14 +70,14 @@ $().ready(function() {
 			<legend>Login Form</legend>
 			<p>
 				<label for="user">Username</label>
-				<input id="user" name="user" required minlength="3" />
+				<input id="user" name="user" required minlength="3">
 			</p>
 			<p>
 				<label for="password">Password</label>
-				<input id="password" type="password" maxlength="12" name="password" required minlength="5" />
+				<input id="password" type="password" maxlength="12" name="password" required minlength="5">
 			</p>
 			<p>
-				<input class="submit" type="submit" value="Login"/>
+				<input class="submit" type="submit" value="Login">
 			</p>
 		</fieldset>
 	</form>
