--- a/demo/jquerymobile.html
+++ b/demo/jquerymobile.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>My Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
@@ -46,13 +46,13 @@
 		<form method="GET">
 			<div data-role="fieldcontain">
 				<label for="email">Email:</label>
-				<input type="email" name="email" id="email" />
+				<input type="email" name="email" id="email">
 			</div>
 			<div data-role="fieldcontain">
 				<label for="password">Password:</label>
-				<input type="password" name="password" id="password" />
+				<input type="password" name="password" id="password">
 			</div>
-			<input data-role="submit" type="submit" value="Login" />
+			<input data-role="submit" type="submit" value="Login">
 		</form>
 	</div>
 </div>
