--- a/demo/login/index.html
+++ b/demo/login/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Login Form with Email Password Link</title>
-	<link rel="stylesheet" media="screen" href="screen.css" />
+	<link rel="stylesheet" media="screen" href="screen.css">
 	<script src="../../lib/jquery.js"></script>
 	<script src="../../dist/jquery.validate.js"></script>
 	<script>
@@ -43,14 +43,14 @@
 						<label for="email">
 							<span class="required">Email address</span>
 						</label>
-						<input id="email" name="email" class="text required email" type="text" />
+						<input id="email" name="email" class="text required email" type="text">
 						<label for="email" class="error">This must be a valid email address</label>
 					</li>
 					<li>
 						<label for="password">
 							<span class="required">Password</span>
 						</label>
-						<input name="password" type="password" class="text required" id="password" minlength="4" maxlength="20" />
+						<input name="password" type="password" class="text required" id="password" minlength="4" maxlength="20">
 					</li>
 					<li>
 						<label class="centered info"><a id="forgotpassword" href="#">Email my password...</a>
@@ -59,7 +59,7 @@
 				</ul>
 			</fieldset>
 			<fieldset class="submit">
-				<input type="submit" class="button" value="Login..." />
+				<input type="submit" class="button" value="Login...">
 			</fieldset>
 			<div class="clear"></div>
 		</form>
