--- a/demo/marketo/index.html
+++ b/demo/marketo/index.html
@@ -8,7 +8,7 @@
 	<script src="../../dist/jquery.validate.js"></script>
 	<script src="jquery.maskedinput.js"></script>
 	<script src="mktSignup.js"></script>
-	<link rel="stylesheet" href="stylesheet.css" />
+	<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 <!-- start page wrapper -->
@@ -22,7 +22,7 @@
 			</div>
 			<div class="logo">
 				<a href="#">
-					<img src="images/logo_marketo.gif" width="168" height="73" alt="Marketo" />
+					<img src="images/logo_marketo.gif" width="168" height="73" alt="Marketo">
 				</a>
 			</div>
 			<div class="nav-global">
@@ -60,13 +60,13 @@
 					<h1>Step 1 of 2</h1>
 					<p>
 					</p>
-					<br clear="all" />
+					<br clear="all">
 					<div>
 						<form id="profileForm" type="actionForm" action="step2.htm" method="get">
 							<div class="error" style="display:none;">
-								<img src="images/warning.gif" alt="Warning!" width="24" height="24" style="float:left; margin: -5px 10px 0px 0px; " />
+								<img src="images/warning.gif" alt="Warning!" width="24" height="24" style="float:left; margin: -5px 10px 0px 0px;">
 								<span></span>.
-								<br clear="all" />
+								<br clear="all">
 							</div>
 							<table cellpadding="0" cellspacing="0" border="0">
 								<tr>
@@ -74,7 +74,7 @@
 										<label for="co_name">Company Name:</label>
 									</td>
 									<td class="field">
-										<input id="co_name" class="required" maxlength="40" name="co_name" size="20" type="text" tabindex="1" value="" />
+										<input id="co_name" class="required" maxlength="40" name="co_name" size="20" type="text" tabindex="1" value="">
 									</td>
 								</tr>
 								<tr>
@@ -82,19 +82,19 @@
 										<label for="co_url">Company URL:</label>
 									</td>
 									<td class="field">
-										<input id="co_url" class="required defaultInvalid url" maxlength="40" name="co_url" style="width:163px" type="text" tabindex="2" value="http://" />
+										<input id="co_url" class="required defaultInvalid url" maxlength="40" name="co_url" style="width:163px" type="text" tabindex="2" value="http://">
 									</td>
 								</tr>
 								<tr>
-									<td/>
-									<td/>
+									<td>
+									<td>
 								</tr>
 								<tr>
 									<td class="label">
 										<label for="first_name">First Name:</label>
 									</td>
 									<td class="field">
-										<input id="first_name" class="required" maxlength="40" name="first_name" size="20" type="text" tabindex="3" value="" />
+										<input id="first_name" class="required" maxlength="40" name="first_name" size="20" type="text" tabindex="3" value="">
 									</td>
 								</tr>
 								<tr>
@@ -102,7 +102,7 @@
 										<label for="last_name">Last Name:</label>
 									</td>
 									<td class="field">
-										<input id="last_name" class="required" maxlength="40" name="last_name" size="20" type="text" tabindex="4" value="" />
+										<input id="last_name" class="required" maxlength="40" name="last_name" size="20" type="text" tabindex="4" value="">
 									</td>
 								</tr>
 								<tr>
@@ -110,13 +110,13 @@
 										<label for="address1">Company Address:</label>
 									</td>
 									<td class="field">
-										<input maxlength="40" class="required" name="address1" size="20" type="text" tabindex="5" value="" />
+										<input maxlength="40" class="required" name="address1" size="20" type="text" tabindex="5" value="">
 									</td>
 								</tr>
 								<tr>
 									<td class="label"></td>
 									<td class="field">
-										<input maxlength="40" name="address2" size="20" type="text" tabindex="6" value="" />
+										<input maxlength="40" name="address2" size="20" type="text" tabindex="6" value="">
 									</td>
 								</tr>
 								<tr>
@@ -124,7 +124,7 @@
 										<label for="city">City:</label>
 									</td>
 									<td class="field">
-										<input maxlength="40" class="required" name="city" size="20" type="text" tabindex="7" value="" />
+										<input maxlength="40" class="required" name="city" size="20" type="text" tabindex="7" value="">
 									</td>
 								</tr>
 								<tr>
@@ -192,7 +192,7 @@
 										<label for="zip">Zip:</label>
 									</td>
 									<td class="field">
-										<input maxlength="10" name="zip" style="width: 100px" type="text" class="required zipcode" tabindex="9" value="" />
+										<input maxlength="10" name="zip" style="width: 100px" type="text" class="required zipcode" tabindex="9" value="">
 									</td>
 								</tr>
 								<tr>
@@ -200,7 +200,7 @@
 										<label for="phone">Phone:</label>
 									</td>
 									<td class="field">
-										<input id="phone" maxlength="14" name="phone" type="text" class="required phone" tabindex="10" value="" />
+										<input id="phone" maxlength="14" name="phone" type="text" class="required phone" tabindex="10" value="">
 									</td>
 								</tr>
 								<tr>
@@ -213,7 +213,7 @@
 										<label for="email">Email:</label>
 									</td>
 									<td class="field">
-										<input id="email" class="required email" remote="emails.action" maxlength="40" name="email" size="20" type="text" tabindex="11" value="" />
+										<input id="email" class="required email" remote="emails.action" maxlength="40" name="email" size="20" type="text" tabindex="11" value="">
 									</td>
 								</tr>
 								<tr>
@@ -221,7 +221,7 @@
 										<label for="password1">Password:</label>
 									</td>
 									<td class="field">
-										<input id="password1" class="required password" maxlength="40" name="password1" size="20" type="password" tabindex="12" value="" />
+										<input id="password1" class="required password" maxlength="40" name="password1" size="20" type="password" tabindex="12" value="">
 									</td>
 								</tr>
 								<tr>
@@ -229,7 +229,7 @@
 										<label for="password2">Retype Password:</label>
 									</td>
 									<td class="field">
-										<input id="password2" class="required" equalTo="#password1" maxlength="40" name="password2" size="20" type="password" tabindex="13" value="" />
+										<input id="password2" class="required" equalTo="#password1" maxlength="40" name="password2" size="20" type="password" tabindex="13" value="">
 										<div class="formError"></div>
 									</td>
 								</tr>
@@ -238,19 +238,19 @@
 									<td>
 										<div class="buttonSubmit">
 											<span></span>
-											<input class="formButton" type="submit" value="Next" style="width: 140px" tabindex="14" />
+											<input class="formButton" type="submit" value="Next" style="width: 140px" tabindex="14">
 										</div>
 									</td>
 								</tr>
 							</table>
-							<br />
-							<br />
+							<br>
+							<br>
 						</form>
-						<br clear="all" />
+						<br clear="all">
 					</div>
 				</div>
 				<!-- end main content -->
-				<br />
+				<br>
 			</div>
 			<!-- end col-main -->
 			<!-- start left col -->
@@ -258,7 +258,7 @@
 				<div class="col-left-header-tab" style="position: absolute;">Signup</div>
 				<div class="nav-left"></div>
 				<div class="left-nav-callout png" style="top: 15px; margin-bottom: 100px;">
-					<img src="images/left-nav-callout-long.png" class="png" alt="" />
+					<img src="images/left-nav-callout-long.png" class="png" alt="">
 					<h6>Sign Up Process</h6>
 					<a style="background-image: url(images/step1-24.gif); font-weight: normal; text-decoration: none; cursor: default;">Sign up with a valid credit card.</a>
 					<a style="background-image: url(images/step2-24.gif); font-weight: normal; text-decoration: none; cursor: default;">Connect to your Google AdWords account.  You will need your AdWords Customer ID.</a>
@@ -266,11 +266,11 @@
 				</div>
 				<div class="footerAddress">
 					<b>Marketo Inc.</b>
-					<br />1710 S. Amphlett Blvd.
-					<br />San Mateo, CA 94402 USA
-					<br />
+					<br>1710 S. Amphlett Blvd.
+					<br>San Mateo, CA 94402 USA
+					<br>
 				</div>
-				<br clear="all" />
+				<br clear="all">
 			</div>
 			<!-- end left col -->
 		</div>
