--- a/demo/marketo/step2.htm
+++ b/demo/marketo/step2.htm
@@ -74,7 +74,7 @@
 									<td class="label" style="vertical-align: top; padding-top: 8px;">Billing Address:</td>
 									<td class="field" style="font-weight: normal">
 										<div class="billingAddressControl">
-											<input type="checkbox" id="bill_to_co" name="bill_to_co" class="toggleCheck" checked="checked" style="width: auto;" tabindex="1" />
+											<input type="checkbox" id="bill_to_co" name="bill_to_co" class="toggleCheck" checked="checked" style="width: auto;" tabindex="1">
 											<label for="bill_to_co" style="cursor:pointer">Same as Company Address</label>
 										</div>
 									</td>
@@ -88,7 +88,7 @@
 														<label for="bill_first_name">First Name:</label>
 													</td>
 													<td class="field">
-														<input maxlength="40" class="billingRequired" name="bill_first_name" size="20" type="text" tabindex="2" value="" />
+														<input maxlength="40" class="billingRequired" name="bill_first_name" size="20" type="text" tabindex="2" value="">
 													</td>
 												</tr>
 												<tr>
@@ -96,7 +96,7 @@
 														<label for="bill_last_name">Last Name:</label>
 													</td>
 													<td class="field">
-														<input maxlength="40" class="billingRequired" name="bill_last_name" size="20" type="text" tabindex="3" value="" />
+														<input maxlength="40" class="billingRequired" name="bill_last_name" size="20" type="text" tabindex="3" value="">
 													</td>
 												</tr>
 												<tr>
@@ -104,7 +104,7 @@
 														<label for="bill_email">Email:</label>
 													</td>
 													<td class="field">
-														<input maxlength="40" class="billingRequired email" remote="emails.action" name="email" size="20" type="text" tabindex="4" value="" />
+														<input maxlength="40" class="billingRequired email" remote="emails.action" name="email" size="20" type="text" tabindex="4" value="">
 														<div class="formError"></div>
 													</td>
 												</tr>
@@ -113,13 +113,13 @@
 														<label for="bill_address1">Address:</label>
 													</td>
 													<td class="field">
-														<input maxlength="40" class="billingRequired" name="bill_address1" size="20" type="text" tabindex="5" value="" />
+														<input maxlength="40" class="billingRequired" name="bill_address1" size="20" type="text" tabindex="5" value="">
 													</td>
 												</tr>
 												<tr>
 													<td class="label"></td>
 													<td class="field">
-														<input maxlength="40" name="bill_address2" size="20" type="text" tabindex="6" value="" />
+														<input maxlength="40" name="bill_address2" size="20" type="text" tabindex="6" value="">
 													</td>
 												</tr>
 												<tr>
@@ -127,7 +127,7 @@
 														<label for="bill_city">City:</label>
 													</td>
 													<td class="field">
-														<input maxlength="40" class="billingRequired" name="bill_city" size="20" type="text" tabindex="7" value="" />
+														<input maxlength="40" class="billingRequired" name="bill_city" size="20" type="text" tabindex="7" value="">
 													</td>
 												</tr>
 												<tr>
@@ -195,7 +195,7 @@
 														<label for="bill_zip">Zip:</label>
 													</td>
 													<td class="field">
-														<input maxlength="10" class="billingRequired zipcode" name="bill_zip" style="width: 100px" type="text" class="zipcode" tabindex="9" value="" />
+														<input maxlength="10" class="billingRequired zipcode" name="bill_zip" style="width: 100px" type="text" class="zipcode" tabindex="9" value="">
 													</td>
 												</tr>
 												<tr>
@@ -203,7 +203,7 @@
 														<label for="bill_phone">Phone:</label>
 													</td>
 													<td class="field">
-														<input maxlength="14" class="billingRequired phone" name="bill_phone" style="width: 100px" type="text" class="phone" tabindex="10" value="" />
+														<input maxlength="14" class="billingRequired phone" name="bill_phone" style="width: 100px" type="text" class="phone" tabindex="10" value="">
 													</td>
 												</tr>
 											</table>
@@ -258,7 +258,7 @@
 										<label for="credit_card">Credit Card Number:</label>
 									</td>
 									<td class="field">
-										<input maxlength="40" id="creditcard" class="required" name="credit_card" size="20" type="text" tabindex="14" />
+										<input maxlength="40" id="creditcard" class="required" name="credit_card" size="20" type="text" tabindex="14">
 									</td>
 								</tr>
 								<tr>
@@ -266,7 +266,7 @@
 										<label for="cc_cvv">Security Code:</label>
 									</td>
 									<td class="field">
-										<input id="ccNumber" class="required" maxlength="4" name="cc_cvv" style="width: 30px;" type="text" style="vertical-align: top;" tabindex="16" value="" />
+										<input id="ccNumber" class="required" maxlength="4" name="cc_cvv" style="width: 30px;" type="text" style="vertical-align: top;" tabindex="16" value="">
 									</td>
 								</tr>
 								<tr>
@@ -274,7 +274,7 @@
 									<td>
 										<div class="buttonSubmit">
 											<span></span>
-											<input class="formButton" type="submit" value="Finish" style="width: 180px" />
+											<input class="formButton" type="submit" value="Finish" style="width: 180px">
 										</div>
 										<br clear="all" />
 									</td>
