--- a/demo/milk/index.html
+++ b/demo/milk/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Remember The Milk signup form - jQuery Validate plugin demo - with friendly permission from the RTM team</title>
-	<link rel="stylesheet" href="milk.css" />
+	<link rel="stylesheet" href="milk.css">
 	<script src="../../lib/jquery.js"></script>
 	<script src="../../lib/jquery.mockjax.js"></script>
 	<script src="../../dist/jquery.validate.js"></script>
@@ -127,7 +127,7 @@
 	<div id="content">
 		<div id="header">
 			<div id="headerlogo">
-				<img src="milk.png" alt="Remember The Milk" />
+				<img src="milk.png" alt="Remember The Milk">
 			</div>
 		</div>
 		<div style="clear: both;">
@@ -149,7 +149,7 @@
 									<label id="lfirstname" for="firstname">First Name</label>
 								</td>
 								<td class="field">
-									<input id="firstname" name="firstname" type="text" value="" maxlength="100" />
+									<input id="firstname" name="firstname" type="text" value="" maxlength="100">
 								</td>
 								<td class="status"></td>
 							</tr>
@@ -158,7 +158,7 @@
 									<label id="llastname" for="lastname">Last Name</label>
 								</td>
 								<td class="field">
-									<input id="lastname" name="lastname" type="text" value="" maxlength="100" />
+									<input id="lastname" name="lastname" type="text" value="" maxlength="100">
 								</td>
 								<td class="status"></td>
 							</tr>
@@ -167,7 +167,7 @@
 									<label id="lusername" for="username">Username</label>
 								</td>
 								<td class="field">
-									<input id="username" name="username" type="text" value="" maxlength="50" />
+									<input id="username" name="username" type="text" value="" maxlength="50">
 								</td>
 								<td class="status"></td>
 							</tr>
@@ -176,7 +176,7 @@
 									<label id="lpassword" for="password">Password</label>
 								</td>
 								<td class="field">
-									<input id="password" name="password" type="password" maxlength="50" value="" />
+									<input id="password" name="password" type="password" maxlength="50" value="">
 								</td>
 								<td class="status"></td>
 							</tr>
@@ -185,7 +185,7 @@
 									<label id="lpassword_confirm" for="password_confirm">Confirm Password</label>
 								</td>
 								<td class="field">
-									<input id="password_confirm" name="password_confirm" type="password" maxlength="50" value="" />
+									<input id="password_confirm" name="password_confirm" type="password" maxlength="50" value="">
 								</td>
 								<td class="status"></td>
 							</tr>
@@ -194,7 +194,7 @@
 									<label id="lemail" for="email">Email Address</label>
 								</td>
 								<td class="field">
-									<input id="email" name="email" type="text" value="" maxlength="150" />
+									<input id="email" name="email" type="text" value="" maxlength="150">
 								</td>
 								<td class="status"></td>
 							</tr>
@@ -207,11 +207,11 @@
 										<tbody>
 											<tr>
 												<td style="padding-right: 5px;">
-													<input id="dateformat_eu" name="dateformat" type="radio" value="0" />
+													<input id="dateformat_eu" name="dateformat" type="radio" value="0">
 													<label id="ldateformat_eu" for="dateformat_eu">14/02/07</label>
 												</td>
 												<td style="padding-left: 5px;">
-													<input id="dateformat_am" name="dateformat" type="radio" value="1" />
+													<input id="dateformat_am" name="dateformat" type="radio" value="1">
 													<label id="ldateformat_am" for="dateformat_am">02/14/07</label>
 												</td>
 												<td>
@@ -225,7 +225,7 @@
 								<td class="label">&nbsp;</td>
 								<td class="field" colspan="2">
 									<div id="termswrap">
-										<input id="terms" type="checkbox" name="terms" />
+										<input id="terms" type="checkbox" name="terms">
 										<label id="lterms" for="terms">I have read and accept the Terms of Use.</label>
 									</div>
 									<!-- /termswrap -->
@@ -236,7 +236,7 @@
 									<label id="lsignupsubmit" for="signupsubmit">Signup</label>
 								</td>
 								<td class="field" colspan="2">
-									<input id="signupsubmit" name="signup" type="submit" value="Signup" />
+									<input id="signupsubmit" name="signup" type="submit" value="Signup">
 								</td>
 							</tr>
 						</table>
