--- a/demo/themerollered.html
+++ b/demo/themerollered.html
@@ -47,14 +47,14 @@
 		<legend class="ui-widget ui-widget-header ui-corner-all">Please provide your name, email address (won't be published) and a comment</legend>
 		<p>
 			<label for="cname">Name (required, at least 2 characters)</label>
-			<input id="cname" name="name" class="ui-widget-content" minlength="2" required type="text" />
+			<input id="cname" name="name" class="ui-widget-content" minlength="2" required type="text">
 			<p>
 				<label for="cemail">E-Mail (required)</label>
-				<input id="cemail" name="email" class="ui-widget-content" type="email" required />
+				<input id="cemail" name="email" class="ui-widget-content" type="email" required>
 			</p>
 			<p>
 				<label for="curl">URL (optional)</label>
-				<input id="curl" name="url" class="ui-widget-content" value="" type="url" />
+				<input id="curl" name="url" class="ui-widget-content" value="" type="url">
 			</p>
 			<p>
 				<label for="ccomment">Your comment (required)</label>
@@ -70,46 +70,46 @@
 		<legend class="ui-widget ui-widget-header ui-corner-all">Validating a complete form</legend>
 		<p>
 			<label for="firstname">Firstname</label>
-			<input id="firstname" name="firstname" type="text" />
+			<input id="firstname" name="firstname" type="text">
 		</p>
 		<p>
 			<label for="lastname">Lastname</label>
-			<input id="lastname" name="lastname" type="text" />
+			<input id="lastname" name="lastname" type="text">
 		</p>
 		<p>
 			<label for="username">Username</label>
-			<input id="username" name="username" type="text" />
+			<input id="username" name="username" type="text">
 		</p>
 		<p>
 			<label for="password">Password</label>
-			<input id="password" name="password" type="password" />
+			<input id="password" name="password" type="password">
 		</p>
 		<p>
 			<label for="confirm_password">Confirm password</label>
-			<input id="confirm_password" name="confirm_password" type="password" />
+			<input id="confirm_password" name="confirm_password" type="password">
 		</p>
 		<p>
 			<label for="email">Email</label>
-			<input id="email" name="email" type="email" />
+			<input id="email" name="email" type="email">
 		</p>
 		<p>
 			<label for="agree">Please agree to our policy</label>
-			<input type="checkbox" class="checkbox" id="agree" name="agree" />
+			<input type="checkbox" class="checkbox" id="agree" name="agree">
 		</p>
 		<p>
 			<label for="newsletter">I'd like to receive the newsletter</label>
-			<input type="checkbox" class="checkbox" id="newsletter" name="newsletter" />
+			<input type="checkbox" class="checkbox" id="newsletter" name="newsletter">
 		</p>
 		<fieldset id="newsletter_topics" class="ui-widget-content ui-corner-all">
 			<legend class="ui-widget-header ui-corner-all">Topics (select at least two) - note: would be hidden when newsletter isn't selected, but is visible here for the demo</legend>
 			<label for="topic_marketflash">
-				<input type="checkbox" id="topic_marketflash" value="marketflash" name="topic" />Marketflash
+				<input type="checkbox" id="topic_marketflash" value="marketflash" name="topic">Marketflash
 			</label>
 			<label for="topic_fuzz">
-				<input type="checkbox" id="topic_fuzz" value="fuzz" name="topic" />Latest fuzz
+				<input type="checkbox" id="topic_fuzz" value="fuzz" name="topic">Latest fuzz
 			</label>
 			<label for="topic_digester">
-				<input type="checkbox" id="topic_digester" value="digester" name="topic" />Mailing list digester
+				<input type="checkbox" id="topic_digester" value="digester" name="topic">Mailing list digester
 			</label>
 			<label for="topic" class="error">Please select at least two topics you'd like to receive.</label>
 		</fieldset>
