--- a/demo/tinymce/index.html
+++ b/demo/tinymce/index.html
@@ -58,12 +58,12 @@
 <form id="myform" action="">
 	<h3>TinyMCE and Validation Plugin integration example</h3>
 	<label>Some other field</label>
-	<input name="title" />
-	<br/>
+	<input name="title">
+	<br>
 	<label>Some richt text</label>
 	<textarea id="content" name="content" rows="15" cols="80" style="width: 80%"></textarea>
-	<br />
-	<input type="submit" name="save" value="Submit" />
+	<br>
+	<input type="submit" name="save" value="Submit">
 </form>
 </body>
 </html>
