--- a/test/events.html
+++ b/test/events.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Test for jQuery validate() plugin</title>
-	<link rel="stylesheet" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<script src="../lib/jquery.js"></script>
 	<script src="firebug/firebug.js"></script>
 	<script>
@@ -52,21 +52,21 @@
 		<legend>A simple comment form with submit validation and default messages</legend>
 		<p>
 			<label for="cname">Name (required, at least 2 characters)</label>
-			<input id="cname" name="name" class="some other styles {required:true,minLength:2}" />
+			<input id="cname" name="name" class="some other styles {required:true,minLength:2}">
 			<p>
 				<label for="cemail">E-Mail (required)</label>
-				<input id="cemail" name="email" class="{required:true,email:true}" />
+				<input id="cemail" name="email" class="{required:true,email:true}">
 			</p>
 			<p>
 				<label for="curl">URL (optional)</label>
-				<input id="curl" name="url" class="{url:true}" value="" />
+				<input id="curl" name="url" class="{url:true}" value="">
 			</p>
 			<p>
 				<label for="ccomment">Your comment (required)</label>
 				<textarea id="ccomment" name="comment" class="{required:true}"></textarea>
 			</p>
 			<p>
-				<input class="submit" type="submit" value="Submit" />
+				<input class="submit" type="submit" value="Submit">
 			</p>
 	</fieldset>
 </form>
