--- a/test/large.html
+++ b/test/large.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Test for jQuery validate() plugin</title>
-	<link rel="stylesheet" media="screen" href="css/screen.css" />
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<script src="../lib/jquery.js"></script>
 	<script src="../lib/jquery.metadata.js"></script>
 	<script src="../lib/jquery.ajaxQueue.js"></script>
@@ -36,14 +36,14 @@
 		<legend>A simple comment form with submit validation and default messages</legend>
 		<p>
 			<label for="cname-x0">Name (required, at least 2 characters)</label>
-			<input id="cname-x0" name="name-x0" class="some other styles {required:true,minLength:2}" />
+			<input id="cname-x0" name="name-x0" class="some other styles {required:true,minLength:2}">
 			<p>
 				<label for="cemail-x0">E-Mail (required)</label>
-				<input id="cemail-x0" name="email-x0" class="{required:true,email:true}" />
+				<input id="cemail-x0" name="email-x0" class="{required:true,email:true}">
 			</p>
 			<p>
 				<label for="curl-x0">URL (optional)</label>
-				<input id="curl-x0" name="url-x0" class="{url:true}" value="" />
+				<input id="curl-x0" name="url-x0" class="{url:true}" value="">
 			</p>
 			<p>
 				<label for="ccomment-x0">Your comment (required)</label>
@@ -51,15 +51,15 @@
 			</p>
 			<p>
 				<label for="cname-x1">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x1" id="cname-x1" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x1" id="cname-x1">
 			</p>
 			<p>
 				<label for="cemail-x1">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x1" id="cemail-x1" />
+				<input class="{required:true,email:true}" name="email-x1" id="cemail-x1">
 			</p>
 			<p>
 				<label for="curl-x1">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x1" id="curl-x1" />
+				<input value="" class="{url:true}" name="url-x1" id="curl-x1">
 			</p>
 			<p>
 				<label for="ccomment-x1">Your comment (required)</label>
@@ -67,15 +67,15 @@
 			</p>
 			<p>
 				<label for="cname-x2">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x2" id="cname-x2" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x2" id="cname-x2">
 			</p>
 			<p>
 				<label for="cemail-x2">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x2" id="cemail-x2" />
+				<input class="{required:true,email:true}" name="email-x2" id="cemail-x2">
 			</p>
 			<p>
 				<label for="curl-x2">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x2" id="curl-x2" />
+				<input value="" class="{url:true}" name="url-x2" id="curl-x2">
 			</p>
 			<p>
 				<label for="ccomment-x2">Your comment (required)</label>
@@ -83,15 +83,15 @@
 			</p>
 			<p>
 				<label for="cname-x3">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x3" id="cname-x3" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x3" id="cname-x3">
 			</p>
 			<p>
 				<label for="cemail-x3">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x3" id="cemail-x3" />
+				<input class="{required:true,email:true}" name="email-x3" id="cemail-x3">
 			</p>
 			<p>
 				<label for="curl-x3">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x3" id="curl-x3" />
+				<input value="" class="{url:true}" name="url-x3" id="curl-x3">
 			</p>
 			<p>
 				<label for="ccomment-x3">Your comment (required)</label>
@@ -99,15 +99,15 @@
 			</p>
 			<p>
 				<label for="cname-x4">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x4" id="cname-x4" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x4" id="cname-x4">
 			</p>
 			<p>
 				<label for="cemail-x4">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x4" id="cemail-x4" />
+				<input class="{required:true,email:true}" name="email-x4" id="cemail-x4">
 			</p>
 			<p>
 				<label for="curl-x4">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x4" id="curl-x4" />
+				<input value="" class="{url:true}" name="url-x4" id="curl-x4">
 			</p>
 			<p>
 				<label for="ccomment-x4">Your comment (required)</label>
@@ -115,15 +115,15 @@
 			</p>
 			<p>
 				<label for="cname-x5">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x5" id="cname-x5" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x5" id="cname-x5">
 			</p>
 			<p>
 				<label for="cemail-x5">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x5" id="cemail-x5" />
+				<input class="{required:true,email:true}" name="email-x5" id="cemail-x5">
 			</p>
 			<p>
 				<label for="curl-x5">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x5" id="curl-x5" />
+				<input value="" class="{url:true}" name="url-x5" id="curl-x5">
 			</p>
 			<p>
 				<label for="ccomment-x5">Your comment (required)</label>
@@ -131,15 +131,15 @@
 			</p>
 			<p>
 				<label for="cname-x6">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x6" id="cname-x6" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x6" id="cname-x6">
 			</p>
 			<p>
 				<label for="cemail-x6">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x6" id="cemail-x6" />
+				<input class="{required:true,email:true}" name="email-x6" id="cemail-x6">
 			</p>
 			<p>
 				<label for="curl-x6">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x6" id="curl-x6" />
+				<input value="" class="{url:true}" name="url-x6" id="curl-x6">
 			</p>
 			<p>
 				<label for="ccomment-x6">Your comment (required)</label>
@@ -147,15 +147,15 @@
 			</p>
 			<p>
 				<label for="cname-x7">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x7" id="cname-x7" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x7" id="cname-x7">
 			</p>
 			<p>
 				<label for="cemail-x7">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x7" id="cemail-x7" />
+				<input class="{required:true,email:true}" name="email-x7" id="cemail-x7">
 			</p>
 			<p>
 				<label for="curl-x7">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x7" id="curl-x7" />
+				<input value="" class="{url:true}" name="url-x7" id="curl-x7">
 			</p>
 			<p>
 				<label for="ccomment-x7">Your comment (required)</label>
@@ -163,15 +163,15 @@
 			</p>
 			<p>
 				<label for="cname-x8">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x8" id="cname-x8" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x8" id="cname-x8">
 			</p>
 			<p>
 				<label for="cemail-x8">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x8" id="cemail-x8" />
+				<input class="{required:true,email:true}" name="email-x8" id="cemail-x8">
 			</p>
 			<p>
 				<label for="curl-x8">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x8" id="curl-x8" />
+				<input value="" class="{url:true}" name="url-x8" id="curl-x8">
 			</p>
 			<p>
 				<label for="ccomment-x8">Your comment (required)</label>
@@ -179,22 +179,22 @@
 			</p>
 			<p>
 				<label for="cname-x9">Name (required, at least 2 characters)</label>
-				<input class="some other styles {required:true,minLength:2}" name="name-x9" id="cname-x9" />
+				<input class="some other styles {required:true,minLength:2}" name="name-x9" id="cname-x9">
 			</p>
 			<p>
 				<label for="cemail-x9">E-Mail (required)</label>
-				<input class="{required:true,email:true}" name="email-x9" id="cemail-x9" />
+				<input class="{required:true,email:true}" name="email-x9" id="cemail-x9">
 			</p>
 			<p>
 				<label for="curl-x9">URL (optional)</label>
-				<input value="" class="{url:true}" name="url-x9" id="curl-x9" />
+				<input value="" class="{url:true}" name="url-x9" id="curl-x9">
 			</p>
 			<p>
 				<label for="ccomment-x9">Your comment (required)</label>
 				<textarea class="{required:true}" name="comment-x9" id="ccomment-x9"></textarea>
 			</p>
 			<p>
-				<input class="submit" type="submit" value="Submit" />
+				<input class="submit" type="submit" value="Submit">
 			</p>
 	</fieldset>
 </form>
