--- a/demo/multipart/index.html
+++ b/demo/multipart/index.html
@@ -73,7 +73,7 @@
 		});
 	});
 	</script>
-	<link rel="stylesheet" media="screen" href="style.css" />
+	<link rel="stylesheet" media="screen" href="style.css">
 </head>
 <body>
 <div id="wrap">
@@ -82,8 +82,8 @@
 			<span>Help me</span>Buy and Sell a House</h1>
 		<h2>This form is quick &amp; easy to complete - in only 3 steps!</h2>
 		<form name="cmaForm" id="cmaForm" method="post">
-			<input type="hidden" name="recordRequestPrimaryServiceID" id="recordRequestPrimaryServiceID" value="100" />
-			<input type="hidden" name="recordClientServices" id="recordClientServices" value="1,3" />
+			<input type="hidden" name="recordRequestPrimaryServiceID" id="recordRequestPrimaryServiceID" value="100">
+			<input type="hidden" name="recordClientServices" id="recordClientServices" value="1,3">
 			<ul id="stepForm" class="ui-accordion-container">
 				<li id="sf1">
 					<a href='#' class="ui-accordion-link"></a>
@@ -93,9 +93,9 @@
 							<div class="requiredNotice">*Required Field</div>
 							<h3 class="stepHeader">Tell us about the property you're buying</h3>
 							<label for="recordPurchaseMetRealtor" class="input required">Are you currently working with a
-								<br />real estate agent?</label>&nbsp;&nbsp;No:
-							<input name="recordPurchaseMetRealtor" type="radio" checked="checked" class="inputclass" value="0" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yes:
-							<input name="recordPurchaseMetRealtor" type="radio" class="inputclass pageRequired" value="1" title="Please choose Yes or No" />
+								<br>real estate agent?</label>&nbsp;&nbsp;No:
+							<input name="recordPurchaseMetRealtor" type="radio" checked="checked" class="inputclass" value="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yes:
+							<input name="recordPurchaseMetRealtor" type="radio" class="inputclass pageRequired" value="1" title="Please choose Yes or No">
 							<div class="formspacer"></div>
 							<label for="recordPurchaseTimeFrameID" class="input required">When would you like to move?</label>
 							<select name="recordPurchaseTimeFrameID" id="recordPurchaseTimeFrameID" class="inputclass pageRequired" title="Select a Time Frame">
@@ -106,7 +106,7 @@
 								<option value="4">9-12 months</option>
 								<option value="5">Over 12 months</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPurchasePriceRangeID" class="input required">Purchase price range:</label>
 							<select name="recordPurchasePriceRangeID" id="recordPurchasePriceRangeID" class="inputclass pageRequired" title="Select a Price Range">
 								<option value="">-Select-</option>
@@ -124,7 +124,7 @@
 								<option value="12">$700,000 - $900,000</option>
 								<option value="13">> $900,000</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPurchaseState" class="input required">State:</label>
 							<select name="recordPurchaseState" id="recordPurchaseState" class="inputclass pageRequired" title="Select a State">
 								<option value="">-Select-</option>
@@ -180,7 +180,7 @@
 								<option value="WI">Wisconsin</option>
 								<option value="WY">Wyoming</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPurchasePropertyTypeID" class="input">Desired property type:</label>
 							<select name="recordPurchasePropertyTypeID" id="recordPurchasePropertyTypeID" class="inputclass" title="Select a Property Type">
 								<option value="">-Select-</option>
@@ -192,9 +192,9 @@
 								<option value="6">Vacation Home</option>
 								<option value="7">Other</option>
 							</select>
-							<br />
+							<br>
 							<div class="buttonWrapper">
-								<input name="formNext1" type="button" class="open1 nextbutton" value="Next" alt="Next" title="Next" />
+								<input name="formNext1" type="button" class="open1 nextbutton" value="Next" alt="Next" title="Next">
 							</div>
 						</fieldset>
 					</div>
@@ -216,7 +216,7 @@
 								<option value="4">9-12 months</option>
 								<option value="5">Over 12 months</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordClientHomeTypeID" class="input required">Type of property you are selling:</label>
 							<select name="recordClientHomeTypeID" id="recordClientHomeTypeID" class="inputclass pageRequired" title="Select a Property Type">
 								<option value="">-Select-</option>
@@ -228,16 +228,16 @@
 								<option value="6">Vacation Home</option>
 								<option value="7">Other</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPropertyAddress1" class="input required">Property Street Address:</label>
-							<input name="recordPropertyAddress1" id="recordPropertyAddress1" class="inputclass pageRequired" title="Street Address is required" maxlength="254" onblur="recordClientAddress1.value = this.value" />
-							<br />
+							<input name="recordPropertyAddress1" id="recordPropertyAddress1" class="inputclass pageRequired" title="Street Address is required" maxlength="254" onblur="recordClientAddress1.value = this.value">
+							<br>
 							<label for="recordPropertyAddress2" class="input">Address (2):</label>
-							<input name="recordPropertyAddress2" id="recordPropertyAddress2" class="inputclass" maxlength="254" onblur="recordClientAddress2.value = this.value" />
-							<br />
+							<input name="recordPropertyAddress2" id="recordPropertyAddress2" class="inputclass" maxlength="254" onblur="recordClientAddress2.value = this.value">
+							<br>
 							<label for="recordPropertyCity" class="input required">City:</label>
-							<input name="recordPropertyCity" id="recordPropertyCity" class="inputclass pageRequired" title="City is required" maxlength="254" onblur="recordClientCity.value = this.value" />
-							<br />
+							<input name="recordPropertyCity" id="recordPropertyCity" class="inputclass pageRequired" title="City is required" maxlength="254" onblur="recordClientCity.value = this.value">
+							<br>
 							<label for="recordPropertyState" class="input required">State:</label>
 							<select name="recordPropertyState" id="recordPropertyState" class="inputclass pageRequired" title="Select a State" onchange="recordClientState.value = this.value">
 								<option value="">-Select-</option>
@@ -293,10 +293,10 @@
 								<option value="WI">Wisconsin</option>
 								<option value="WY">Wyoming</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPropertyZip" class="input required">Zip:</label>
-							<input name="recordPropertyZip" id="recordPropertyZip" class="inputclass pageRequired" title="Zip Code is required" maxlength="254" onblur="recordClientZip.value = this.value" />
-							<br />
+							<input name="recordPropertyZip" id="recordPropertyZip" class="inputclass pageRequired" title="Zip Code is required" maxlength="254" onblur="recordClientZip.value = this.value">
+							<br>
 							<label for="recordClientPropertyValueID" class="input required">Estimated Market Value:</label>
 							<select name="recordClientPropertyValueID" id="recordClientPropertyValueID" class="inputclass pageRequired" title="Select a Price Range">
 								<option value="">-Select-</option>
@@ -314,7 +314,7 @@
 								<option value="12">$700-$900K</option>
 								<option value="13">Over $900K</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPropertyBedroomsID" class="input">Bedrooms:</label>
 							<select name="recordPropertyBedroomsID" id="recordPropertyBedroomsID" class="inputclass">
 								<option value="">-Select-</option>
@@ -324,7 +324,7 @@
 								<option value="4">4</option>
 								<option value="5">5+</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPropertyBathroomsId" class="input">Bathrooms:</label>
 							<select name="recordPropertyBathroomsId" id="recordPropertyBathroomsId" class="inputclass">
 								<option value="">-Select-</option>
@@ -336,7 +336,7 @@
 								<option value="6">3.5</option>
 								<option value="7">4+</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPropertyAgeId" class="input">Approx. Age of Home:</label>
 							<select name="recordPropertyAgeId" id="recordPropertyAgeId" class="inputclass">
 								<option value="">-Select-</option>
@@ -346,13 +346,13 @@
 								<option value="4">11-15 years</option>
 								<option value="5">More than 15 years</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordPropertySqFt" class="input">Approx. Square Footage:</label>
-							<input name="recordPropertySqFt" id="recordPropertySqFt" class="inputclass" maxlength="254" />
-							<br />
+							<input name="recordPropertySqFt" id="recordPropertySqFt" class="inputclass" maxlength="254">
+							<br>
 							<div class="buttonWrapper">
-								<input name="formBack0" type="button" class="open0 prevbutton" value="Back" alt="Back" title="Back" />
-								<input name="formNext2" type="button" class="open2 nextbutton" value="Next" alt="Next" title="Next" />
+								<input name="formBack0" type="button" class="open0 prevbutton" value="Back" alt="Back" title="Back">
+								<input name="formNext2" type="button" class="open2 nextbutton" value="Next" alt="Next" title="Next">
 							</div>
 						</fieldset>
 					</div>
@@ -366,20 +366,20 @@
 							<div class="requiredNotice">*Required Field</div>
 							<h3 class="stepHeader">Tell us about yourself</h3>
 							<label for="recordClientNameFirst" class="input required">First Name:</label>
-							<input name="recordClientNameFirst" id="recordClientNameFirst" class="inputclass pageRequired" title="First Name is required" maxlength="254" />
-							<br />
+							<input name="recordClientNameFirst" id="recordClientNameFirst" class="inputclass pageRequired" title="First Name is required" maxlength="254">
+							<br>
 							<label for="recordClientNameLast" class="input required">Last Name:</label>
-							<input name="recordClientNameLast" id="recordClientNameLast" class="inputclass pageRequired" maxlength="254" title="Last Name is required" />
-							<br />
+							<input name="recordClientNameLast" id="recordClientNameLast" class="inputclass pageRequired" maxlength="254" title="Last Name is required">
+							<br>
 							<label for="recordClientAddress1" class="input required">Current Address:</label>
-							<input name="recordClientAddress1" id="recordClientAddress1" class="inputclass pageRequired" maxlength="254" title="Address is required" />
-							<br />
+							<input name="recordClientAddress1" id="recordClientAddress1" class="inputclass pageRequired" maxlength="254" title="Address is required">
+							<br>
 							<label for="recordClientAddress2" class="input">Address (2):</label>
-							<input name="recordClientAddress2" id="recordClientAddress2" class="inputclass" maxlength="254" />
-							<br />
+							<input name="recordClientAddress2" id="recordClientAddress2" class="inputclass" maxlength="254">
+							<br>
 							<label for="recordClientCity" class="input required">City:</label>
-							<input name="recordClientCity" id="recordClientCity" class="inputclass pageRequired" maxlength="254" title="City is required" />
-							<br />
+							<input name="recordClientCity" id="recordClientCity" class="inputclass pageRequired" maxlength="254" title="City is required">
+							<br>
 							<label for="recordClientState" class="input required">State:</label>
 							<select name="recordClientState" id="recordClientState" class="inputclass pageRequired" title="Select a State">
 								<option value="">-Select-</option>
@@ -435,26 +435,26 @@
 								<option value="WI">Wisconsin</option>
 								<option value="WY">Wyoming</option>
 							</select>
-							<br />
+							<br>
 							<label for="recordClientZip" class="input required">Zip:</label>
-							<input name="recordClientZip" id="recordClientZip" class="inputclass pageRequired" maxlength="12" title="Zip Code is required" />
-							<br />
+							<input name="recordClientZip" id="recordClientZip" class="inputclass pageRequired" maxlength="12" title="Zip Code is required">
+							<br>
 							<label for="recordClientPhone" class="input required">Phone Number:</label>
-							<input name="recordClientPhone" id="recordClientPhone" class="inputclass pageRequired" maxlength="254" title="Phone Number is required" />
-							<br />
+							<input name="recordClientPhone" id="recordClientPhone" class="inputclass pageRequired" maxlength="254" title="Phone Number is required">
+							<br>
 							<label for="recordClientPhoneAlt" class="input">Alternate Number:</label>
-							<input name="recordClientPhoneAlt" id="recordClientPhoneAlt" class="inputclass" maxlength="254" />
-							<br />
+							<input name="recordClientPhoneAlt" id="recordClientPhoneAlt" class="inputclass" maxlength="254">
+							<br>
 							<label for="recordClientEmail" class="input required">Email Address:</label>
-							<input name="recordClientEmail" id="recordClientEmail" class="inputclass pageRequired email" maxlength="254" title="Email address is required" />
-							<br />
+							<input name="recordClientEmail" id="recordClientEmail" class="inputclass pageRequired email" maxlength="254" title="Email address is required">
+							<br>
 							<label for="recordClientEmail1" class="input required">Confirm Email:</label>
-							<input name="recordClientEmail1" id="recordClientEmail1" class="inputclass pageRequired" equalTo: "'#recordClientEmail" maxlength="254" title="Please confirm your email address" />
-							<br />
-							<br />
+							<input name="recordClientEmail1" id="recordClientEmail1" class="inputclass pageRequired" equalTo: "'#recordClientEmail" maxlength="254" title="Please confirm your email address">
+							<br>
+							<br>
 							<p class="formDisclaimer">This is a sample form, no information is sent anywhere.</p>
 							<div class="buttonWrapper">
-								<input name="formBack1" type="button" class="open1 prevbutton" value="Back" alt="Back" title="Back" />
+								<input name="formBack1" type="button" class="open1 prevbutton" value="Back" alt="Back" title="Back">
 								<input name="submit" type="submit" id="submit" value="Submit" class="submitbutton" alt="Submit" title="Submit">
 							</div>
 						</fieldset>
