--- a/demo/requirejs/index.html
+++ b/demo/requirejs/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>jQuery validation plug-in - requirejs demo</title>
 
-		<link rel="stylesheet" href="../css/screen.css" />
+		<link rel="stylesheet" href="../css/screen.css">
 
 		<style type="text/css">
 			#commentForm { width: 500px; }
